# buddy-chat-app

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
src/api/: routes.rs
src/api/handlers/: chat_handlers.rs  mod.rs
src/chat/: mod.rs  schema.rs  services.rs
