[package]
edition = "2021"
name = "buddy_chat"
version = "0.0.1"

[dependencies]
axum = {version = "0.7.5", features = ["ws"]}
axum-macros = "0.4.1"
chrono = {version = "0.4", features = ["serde"]}
deadpool-diesel = {version = "0.6", features = ["postgres"]}
diesel = {version = "2.2", features = ["postgres", "serde_json", "chrono"]}
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3.30"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
socketioxide = {version = "0.14.1", features = ["state"]}
thiserror = "1.0.61"
tokio = {version = "1.38", features = ["sync", "macros", "rt-multi-thread"]}

[[bin]]
name = "buddy_chat"
path = "./src/main.rs"
